--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     p.error { margin-top: 2em; }
     p.error span { background: #C10100; color: white; padding: 2px 4px; }
     .external-signin { padding-left: 100px;}
-	  .creds{color:red;}
+	  
   </style>
 </head>
 <body>
@@ -34,7 +34,7 @@
       <div class="wf-content">
         <h1>Log into Sitecore</h1>
         
-	      <h2 id="creds">TYPE YOUR CREDENTIALS AGAIN PLEASE</h2>
+	      <h2 id="creds"><font color="#006699">TYPE YOUR CREDENTIALS AGAIN PLEASE</font></h2>
         
         <div class="login-form">
           <input name="LoginTextBox" type="text" value="sitecore\admin" id="LoginTextBox" title="Login" class="wf-watermarked" /> 
