--- a/1.html
+++ b/1.html
@@ -1,1 +1,11 @@
-asdasd
+  GNU nano 4.8                                                                                          p.html                                                                                                     
+<!DOCTYPE html>
+<html>
+  <script>alert(1)</script>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
